--- a/build.xml
+++ b/build.xml
@@ -1,8 +1,5 @@
 <project name="Compiler" default="compile" basedir=".">
-    <property name="cup" location="src"/>
-    <property name="jflex" location="src"/>
-    <property name="src" location="src"/>
-    <property name="classes" location="bin"/>
+    <property name="classes" location="out"/>
     <property name="lib" location="lib"/>
     <property name="tools" location="tools"/>
 
@@ -10,8 +7,8 @@
     <taskdef name="cup" classname="java_cup.anttask.CUPTask" classpath="${tools}/java-cup-11b.jar"/>
 
     <target name="generate">
-        <jflex file="${cup}/Scanner.lex" destdir="${src}"/>
-        <cup srcfile="${jflex}/Parser.cup" destdir="${src}"
+        <jflex file="src/main/ucu/Scanner.lex" destdir="src/main"/>
+        <cup srcfile="src/main/ucu/Parser.cup" destdir="src/main"
              parser="Parser" interface="true" locations="false" force="true"/>
     </target>
 
@@ -20,15 +17,15 @@
     </path>
 
     <target name="compile" depends="generate">
-        <javac srcdir="${src}" destdir="${classes}">
+        <javac srcdir="src/main/ucu" destdir="${classes}">
             <classpath refid="libraries"/>
         </javac>
     </target>
 
     <target name="clean">
-        <delete file="${src}/Parser.java"/>
-        <delete file="${src}/sym.java"/>
-        <delete file="${src}/Scanner.java"/>
+        <delete file="src/main/ucu/Parser.java"/>
+        <delete file="src/main/ucu/sym.java"/>
+        <delete file="src/main/ucu/Scanner.java"/>
         <delete dir="${classes}"/>
     </target>
 </project>
