--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="src/test"/>
+	<classpathentry kind="src" path="src/main"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/java-cup-11b-runtime"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/tools"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/java-cup-11b"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jflex-1.6.1"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/junit-4.12"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/hamcrest-core-1.3"/>
 	<classpathentry kind="output" path="out/production/sfx"/>
 </classpath>
